building for Elena

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -77,6 +77,6 @@ set(CS225A_COMMON_LIBRARIES
 
 set (CS225A_BINARY_DIR ${PROJECT_SOURCE_DIR}/bin)
 
-add_subdirectory(project_starter_code)
+# add_subdirectory(project_starter_code)
 add_subdirectory(construction)
 add_subdirectory(gui-construction)
