--- a/construction/CMakeLists.txt
+++ b/construction/CMakeLists.txt
@@ -7,12 +7,12 @@ add_definitions(${SAI2-PRIMITIVES_DEFINITIONS})
 set (CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CS225A_BINARY_DIR}/construction)
 ADD_EXECUTABLE (simviz simviz.cpp ${CS225A_COMMON_SOURCE})
 ADD_EXECUTABLE (controller controller.cpp ${CS225A_COMMON_SOURCE})
-ADD_EXECUTABLE (simulation simulation.cpp ${CS225A_COMMON_SOURCE})
+# ADD_EXECUTABLE (simulation simulation.cpp ${CS225A_COMMON_SOURCE})
 
 # and link the library against the executable
 TARGET_LINK_LIBRARIES (simviz ${CS225A_COMMON_LIBRARIES} ${SAI2-PRIMITIVES_LIBRARIES})
 TARGET_LINK_LIBRARIES (controller ${CS225A_COMMON_LIBRARIES} ${SAI2-PRIMITIVES_LIBRARIES})
-TARGET_LINK_LIBRARIES (simulation ${CS225A_COMMON_LIBRARIES} ${SAI2-PRIMITIVES_LIBRARIES})
+# TARGET_LINK_LIBRARIES (simulation ${CS225A_COMMON_LIBRARIES} ${SAI2-PRIMITIVES_LIBRARIES})
 
 # copy example interface to output
 FILE(COPY gui-construction.html DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
@@ -21,10 +21,10 @@ FILE(COPY gui-construction.html DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
 # NOTE: this requires an install build
 SET(APP_RESOURCE_DIR ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/resources)
 FILE(MAKE_DIRECTORY ${APP_RESOURCE_DIR})
-FILE(COPY mmp_panda.urdf DESTINATION ${APP_RESOURCE_DIR})
+FILE(COPY panda_arm.urdf DESTINATION ${APP_RESOURCE_DIR})
 FILE(COPY world.urdf DESTINATION ${APP_RESOURCE_DIR})
-FILE(COPY mmp_panda_tool_no_collision.urdf DESTINATION ${APP_RESOURCE_DIR})
-FILE(COPY mmp_panda_tool_collision.urdf DESTINATION ${APP_RESOURCE_DIR})
+# FILE(COPY mmp_panda_tool_no_collision.urdf DESTINATION ${APP_RESOURCE_DIR})
+# FILE(COPY mmp_panda_tool_collision.urdf DESTINATION ${APP_RESOURCE_DIR})
 
 # copy in sai2-interfaces
 FILE(COPY ${SAI2-INTERFACES_UI_DIR} DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
