new simviz works

--- a/joint/CMakeLists.txt
+++ b/joint/CMakeLists.txt
@@ -22,8 +22,8 @@ FILE(COPY gui-construction.html DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
 SET(APP_RESOURCE_DIR ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/resources)
 FILE(MAKE_DIRECTORY ${APP_RESOURCE_DIR})
 FILE(COPY mmp_panda.urdf DESTINATION ${APP_RESOURCE_DIR})
-FILE(COPY panda_arm.urdf DESTINATION ${APP_RESOURCE_DIR})
-FILE(COPY panda_arm_drill.urdf DESTINATION ${APP_RESOURCE_DIR})
+FILE(COPY mmp_panda_tool_collision.urdf DESTINATION ${APP_RESOURCE_DIR})
+FILE(COPY mmp_panda_tool_no_collision.urdf DESTINATION ${APP_RESOURCE_DIR})
 FILE(COPY world2.urdf DESTINATION ${APP_RESOURCE_DIR})
 # FILE(COPY mmp_panda_tool_no_collision.urdf DESTINATION ${APP_RESOURCE_DIR})
 # FILE(COPY mmp_panda_tool_collision.urdf DESTINATION ${APP_RESOURCE_DIR})
