--- a/gui-construction/CMakeLists.txt
+++ b/gui-construction/CMakeLists.txt
@@ -14,8 +14,8 @@ TARGET_LINK_LIBRARIES (simviz_gui ${CS225A_COMMON_LIBRARIES})
 # NOTE: this requires an install build
 SET(APP_RESOURCE_DIR ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/resources)
 FILE(MAKE_DIRECTORY ${APP_RESOURCE_DIR})
-FILE(COPY ../construction/mmp_panda.urdf DESTINATION ${APP_RESOURCE_DIR})
-FILE(COPY ../construction/world.urdf DESTINATION ${APP_RESOURCE_DIR})
+FILE(COPY ../joint/mmp_panda.urdf DESTINATION ${APP_RESOURCE_DIR})
+FILE(COPY ../joint/world2.urdf DESTINATION ${APP_RESOURCE_DIR})
 
 # FILE(COPY ../model/YZ_steel DESTINATION ${APP_RESOURCE_DIR})
 
