--- a/weld/CMakeLists.txt
+++ b/weld/CMakeLists.txt
@@ -4,14 +4,14 @@ include_directories(${SAI2-PRIMITIVES_INCLUDE_DIRS})
 add_definitions(${SAI2-PRIMITIVES_DEFINITIONS})
 
 # create an executable
-set (CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CS225A_BINARY_DIR}/joint)
-ADD_EXECUTABLE (simviz2 simviz2.cpp ${CS225A_COMMON_SOURCE})
-ADD_EXECUTABLE (controller3 controller3.cpp ${CS225A_COMMON_SOURCE})
+set (CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CS225A_BINARY_DIR}/weld)
+ADD_EXECUTABLE (simviz3 simviz3.cpp ${CS225A_COMMON_SOURCE})
+ADD_EXECUTABLE (controller4 controller4.cpp ${CS225A_COMMON_SOURCE})
 # ADD_EXECUTABLE (simulation simulation.cpp ${CS225A_COMMON_SOURCE})
 
 # and link the library against the executable
-TARGET_LINK_LIBRARIES (simviz2 ${CS225A_COMMON_LIBRARIES} ${SAI2-PRIMITIVES_LIBRARIES})
-TARGET_LINK_LIBRARIES (controller3 ${CS225A_COMMON_LIBRARIES} ${SAI2-PRIMITIVES_LIBRARIES})
+TARGET_LINK_LIBRARIES (simviz3 ${CS225A_COMMON_LIBRARIES} ${SAI2-PRIMITIVES_LIBRARIES})
+TARGET_LINK_LIBRARIES (controller4 ${CS225A_COMMON_LIBRARIES} ${SAI2-PRIMITIVES_LIBRARIES})
 # TARGET_LINK_LIBRARIES (simulation ${CS225A_COMMON_LIBRARIES} ${SAI2-PRIMITIVES_LIBRARIES})
 
 # copy example interface to output
@@ -24,7 +24,7 @@ FILE(MAKE_DIRECTORY ${APP_RESOURCE_DIR})
 FILE(COPY mmp_panda.urdf DESTINATION ${APP_RESOURCE_DIR})
 FILE(COPY mmp_panda_tool_collision.urdf DESTINATION ${APP_RESOURCE_DIR})
 FILE(COPY mmp_panda_tool_no_collision.urdf DESTINATION ${APP_RESOURCE_DIR})
-FILE(COPY world2.urdf DESTINATION ${APP_RESOURCE_DIR})
+FILE(COPY world3.urdf DESTINATION ${APP_RESOURCE_DIR})
 # FILE(COPY mmp_panda_tool_no_collision.urdf DESTINATION ${APP_RESOURCE_DIR})
 # FILE(COPY mmp_panda_tool_collision.urdf DESTINATION ${APP_RESOURCE_DIR})
 
