--- a/joint/CMakeLists.txt
+++ b/joint/CMakeLists.txt
@@ -21,7 +21,7 @@ FILE(COPY gui-construction.html DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
 # NOTE: this requires an install build
 SET(APP_RESOURCE_DIR ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/resources)
 FILE(MAKE_DIRECTORY ${APP_RESOURCE_DIR})
-FILE(COPY mmp_panda.urdf DESTINATION ${APP_RESOURCE_DIR})
+FILE(COPY mmp_panda2.urdf DESTINATION ${APP_RESOURCE_DIR})
 FILE(COPY mmp_panda_tool_collision.urdf DESTINATION ${APP_RESOURCE_DIR})
 FILE(COPY mmp_panda_tool_no_collision.urdf DESTINATION ${APP_RESOURCE_DIR})
 FILE(COPY world2.urdf DESTINATION ${APP_RESOURCE_DIR})
