--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -81,6 +81,6 @@ set (CS225A_BINARY_DIR ${PROJECT_SOURCE_DIR}/bin)
 add_subdirectory(bolting_two_arms)
 add_subdirectory(joint)
 add_subdirectory(weld)
-add_subdirectory(gui-construction)
-add_subdirectory(bolting_cs225a)
-# add_subdirectory(gui-seed)
+add_subdirectory(gui_weld)
+#add_subdirectory(bolting_cs225a)
+# add_subdirectory(gui_two_arms)
