Simviz and controller 267 is for other stuff Tracy is testing, ignore it

--- a/weld/CMakeLists.txt
+++ b/weld/CMakeLists.txt
@@ -7,11 +7,15 @@ add_definitions(${SAI2-PRIMITIVES_DEFINITIONS})
 set (CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CS225A_BINARY_DIR}/weld)
 ADD_EXECUTABLE (simviz3 simviz3.cpp ${CS225A_COMMON_SOURCE})
 ADD_EXECUTABLE (controller4 controller4.cpp ${CS225A_COMMON_SOURCE})
+ADD_EXECUTABLE (simviz267 simviz267.cpp ${CS225A_COMMON_SOURCE})
+ADD_EXECUTABLE (controller267 controller267.cpp ${CS225A_COMMON_SOURCE})
 # ADD_EXECUTABLE (simulation simulation.cpp ${CS225A_COMMON_SOURCE})
 
 # and link the library against the executable
 TARGET_LINK_LIBRARIES (simviz3 ${CS225A_COMMON_LIBRARIES} ${SAI2-PRIMITIVES_LIBRARIES})
 TARGET_LINK_LIBRARIES (controller4 ${CS225A_COMMON_LIBRARIES} ${SAI2-PRIMITIVES_LIBRARIES})
+TARGET_LINK_LIBRARIES (simviz267 ${CS225A_COMMON_LIBRARIES} ${SAI2-PRIMITIVES_LIBRARIES})
+TARGET_LINK_LIBRARIES (controller267 ${CS225A_COMMON_LIBRARIES} ${SAI2-PRIMITIVES_LIBRARIES})
 # TARGET_LINK_LIBRARIES (simulation ${CS225A_COMMON_LIBRARIES} ${SAI2-PRIMITIVES_LIBRARIES})
 
 # copy example interface to output
