--- a/joint/CMakeLists.txt
+++ b/joint/CMakeLists.txt
@@ -5,28 +5,19 @@ add_definitions(${SAI2-PRIMITIVES_DEFINITIONS})
 
 # create an executable
 set (CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CS225A_BINARY_DIR}/joint)
-ADD_EXECUTABLE (simviz2 simviz2.cpp ${CS225A_COMMON_SOURCE})
-ADD_EXECUTABLE (controller3 controller3.cpp ${CS225A_COMMON_SOURCE})
-# ADD_EXECUTABLE (simulation simulation.cpp ${CS225A_COMMON_SOURCE})
+ADD_EXECUTABLE (simviz_joint simviz.cpp ${CS225A_COMMON_SOURCE})
+ADD_EXECUTABLE (controller_joint controller.cpp ${CS225A_COMMON_SOURCE})
 
 # and link the library against the executable
-TARGET_LINK_LIBRARIES (simviz2 ${CS225A_COMMON_LIBRARIES} ${SAI2-PRIMITIVES_LIBRARIES})
-TARGET_LINK_LIBRARIES (controller3 ${CS225A_COMMON_LIBRARIES} ${SAI2-PRIMITIVES_LIBRARIES})
-# TARGET_LINK_LIBRARIES (simulation ${CS225A_COMMON_LIBRARIES} ${SAI2-PRIMITIVES_LIBRARIES})
-
-# copy example interface to output
-FILE(COPY gui-construction.html DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
+TARGET_LINK_LIBRARIES (simviz_joint ${CS225A_COMMON_LIBRARIES} ${SAI2-PRIMITIVES_LIBRARIES})
+TARGET_LINK_LIBRARIES (controller_joint ${CS225A_COMMON_LIBRARIES} ${SAI2-PRIMITIVES_LIBRARIES})
 
 # export resources such as model files.
 # NOTE: this requires an install build
 SET(APP_RESOURCE_DIR ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/resources)
 FILE(MAKE_DIRECTORY ${APP_RESOURCE_DIR})
-FILE(COPY mmp_panda2.urdf DESTINATION ${APP_RESOURCE_DIR})
-FILE(COPY mmp_panda_tool_collision.urdf DESTINATION ${APP_RESOURCE_DIR})
-FILE(COPY mmp_panda_tool_no_collision.urdf DESTINATION ${APP_RESOURCE_DIR})
-FILE(COPY world2.urdf DESTINATION ${APP_RESOURCE_DIR})
-# FILE(COPY mmp_panda_tool_no_collision.urdf DESTINATION ${APP_RESOURCE_DIR})
-# FILE(COPY mmp_panda_tool_collision.urdf DESTINATION ${APP_RESOURCE_DIR})
+FILE(COPY joint_robot.urdf DESTINATION ${APP_RESOURCE_DIR})
+FILE(COPY world.urdf DESTINATION ${APP_RESOURCE_DIR})
 
 # copy in sai2-interfaces
 FILE(COPY ${SAI2-INTERFACES_UI_DIR} DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
