--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -78,9 +78,9 @@ set(CS225A_COMMON_LIBRARIES
 set (CS225A_BINARY_DIR ${PROJECT_SOURCE_DIR}/bin)
 
 # add_subdirectory(project_starter_code)
-add_subdirectory(bolting_two_arms)
+#add_subdirectory(bolting_two_arms)
 add_subdirectory(joint)
-add_subdirectory(weld)
-add_subdirectory(gui_weld)
+#add_subdirectory(weld)
+#add_subdirectory(gui_weld)
 #add_subdirectory(bolting_cs225a)
 # add_subdirectory(gui_two_arms)
