renamed file names and cleared up repo

--- a/gui_weld/CMakeLists.txt
+++ b/gui_weld/CMakeLists.txt
@@ -17,8 +17,8 @@ FILE(MAKE_DIRECTORY ${APP_RESOURCE_DIR})
 #FILE(COPY ../joint/mmp_panda.urdf DESTINATION ${APP_RESOURCE_DIR})
 #FILE(COPY ../joint/world2.urdf DESTINATION ${APP_RESOURCE_DIR})
 
-FILE(COPY ../weld/mmp_panda3.urdf DESTINATION ${APP_RESOURCE_DIR})
-FILE(COPY ../weld/world3.urdf DESTINATION ${APP_RESOURCE_DIR})
+FILE(COPY ../weld/mmp_panda_weld.urdf DESTINATION ${APP_RESOURCE_DIR})
+FILE(COPY ../weld/world_weld.urdf DESTINATION ${APP_RESOURCE_DIR})
 
 # FILE(COPY ../model/YZ_steel DESTINATION ${APP_RESOURCE_DIR})
 
