--- a/weld/CMakeLists.txt
+++ b/weld/CMakeLists.txt
@@ -5,17 +5,13 @@ add_definitions(${SAI2-PRIMITIVES_DEFINITIONS})
 
 # create an executable
 set (CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CS225A_BINARY_DIR}/weld)
-ADD_EXECUTABLE (simviz3 simviz3.cpp ${CS225A_COMMON_SOURCE})
-ADD_EXECUTABLE (controller4 controller4.cpp ${CS225A_COMMON_SOURCE})
-ADD_EXECUTABLE (simviz267 simviz267.cpp ${CS225A_COMMON_SOURCE})
-ADD_EXECUTABLE (controller267 controller267.cpp ${CS225A_COMMON_SOURCE})
+ADD_EXECUTABLE (simviz_weld simviz_weld.cpp ${CS225A_COMMON_SOURCE})
+ADD_EXECUTABLE (controller_weld controller_weld.cpp ${CS225A_COMMON_SOURCE})
 # ADD_EXECUTABLE (simulation simulation.cpp ${CS225A_COMMON_SOURCE})
 
 # and link the library against the executable
-TARGET_LINK_LIBRARIES (simviz3 ${CS225A_COMMON_LIBRARIES} ${SAI2-PRIMITIVES_LIBRARIES})
-TARGET_LINK_LIBRARIES (controller4 ${CS225A_COMMON_LIBRARIES} ${SAI2-PRIMITIVES_LIBRARIES})
-TARGET_LINK_LIBRARIES (simviz267 ${CS225A_COMMON_LIBRARIES} ${SAI2-PRIMITIVES_LIBRARIES})
-TARGET_LINK_LIBRARIES (controller267 ${CS225A_COMMON_LIBRARIES} ${SAI2-PRIMITIVES_LIBRARIES})
+TARGET_LINK_LIBRARIES (simviz_weld ${CS225A_COMMON_LIBRARIES} ${SAI2-PRIMITIVES_LIBRARIES})
+TARGET_LINK_LIBRARIES (controller_weld ${CS225A_COMMON_LIBRARIES} ${SAI2-PRIMITIVES_LIBRARIES})
 # TARGET_LINK_LIBRARIES (simulation ${CS225A_COMMON_LIBRARIES} ${SAI2-PRIMITIVES_LIBRARIES})
 
 # copy example interface to output
@@ -25,10 +21,10 @@ FILE(COPY gui-construction.html DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
 # NOTE: this requires an install build
 SET(APP_RESOURCE_DIR ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/resources)
 FILE(MAKE_DIRECTORY ${APP_RESOURCE_DIR})
-FILE(COPY mmp_panda3.urdf DESTINATION ${APP_RESOURCE_DIR})
+FILE(COPY mmp_panda_weld.urdf DESTINATION ${APP_RESOURCE_DIR})
 FILE(COPY mmp_panda_tool_collision.urdf DESTINATION ${APP_RESOURCE_DIR})
 FILE(COPY mmp_panda_tool_no_collision.urdf DESTINATION ${APP_RESOURCE_DIR})
-FILE(COPY world3.urdf DESTINATION ${APP_RESOURCE_DIR})
+FILE(COPY world_weld.urdf DESTINATION ${APP_RESOURCE_DIR})
 # FILE(COPY mmp_panda_tool_no_collision.urdf DESTINATION ${APP_RESOURCE_DIR})
 # FILE(COPY mmp_panda_tool_collision.urdf DESTINATION ${APP_RESOURCE_DIR})
 
