change joint file name to joint_haptics

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -79,8 +79,8 @@ set (CS225A_BINARY_DIR ${PROJECT_SOURCE_DIR}/bin)
 
 # add_subdirectory(project_starter_code)
 #add_subdirectory(bolting_two_arms)
-add_subdirectory(joint)
-#add_subdirectory(weld)
+add_subdirectory(joint_haptics)
+add_subdirectory(weld)
 #add_subdirectory(gui_weld)
 #add_subdirectory(bolting_cs225a)
 # add_subdirectory(gui_two_arms)
