change Ruta's joint file to joint_autonomous

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -80,6 +80,7 @@ set (CS225A_BINARY_DIR ${PROJECT_SOURCE_DIR}/bin)
 # add_subdirectory(project_starter_code)
 #add_subdirectory(bolting_two_arms)
 add_subdirectory(joint_haptics)
+add_subdirectory(joint_autonomous)
 add_subdirectory(weld)
 #add_subdirectory(gui_weld)
 #add_subdirectory(bolting_cs225a)
