--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -77,11 +77,14 @@ set(CS225A_COMMON_LIBRARIES
 
 set (CS225A_BINARY_DIR ${PROJECT_SOURCE_DIR}/bin)
 
-# add_subdirectory(project_starter_code)
+# add_subdirectory(task_starter_code)
+#add_subdirectory(bolting_one_arm_cs225a)
+# add_subdirectory(bolting_two_arms_gui)
 #add_subdirectory(bolting_two_arms)
-add_subdirectory(joint_haptics)
+#add_subdirectory(weld_gui)
+add_subdirectory(weld_haptics)
 add_subdirectory(joint_autonomous)
-add_subdirectory(weld)
-#add_subdirectory(gui_weld)
-#add_subdirectory(bolting_cs225a)
-# add_subdirectory(gui_two_arms)
+add_subdirectory(joint_haptics)
+
+
+
