updated welding cmake and launch

--- a/weld_haptics/CMakeLists.txt
+++ b/weld_haptics/CMakeLists.txt
@@ -4,7 +4,7 @@ include_directories(${SAI2-PRIMITIVES_INCLUDE_DIRS})
 add_definitions(${SAI2-PRIMITIVES_DEFINITIONS})
 
 # create an executable
-set (CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CS225A_BINARY_DIR}/weld)
+set (CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CS225A_BINARY_DIR}/weld_haptics)
 ADD_EXECUTABLE (simviz_weld simviz_weld.cpp ${CS225A_COMMON_SOURCE})
 ADD_EXECUTABLE (controller_weld controller_weld.cpp ${CS225A_COMMON_SOURCE})
 
@@ -20,10 +20,9 @@ TARGET_LINK_LIBRARIES (controller_weld ${CS225A_COMMON_LIBRARIES} ${SAI2-PRIMITI
 SET(APP_RESOURCE_DIR ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/resources)
 FILE(MAKE_DIRECTORY ${APP_RESOURCE_DIR})
 FILE(COPY mmp_panda_weld.urdf DESTINATION ${APP_RESOURCE_DIR})
+FILE(COPY world_weld.urdf DESTINATION ${APP_RESOURCE_DIR})
 # FILE(COPY mmp_panda_tool_collision.urdf DESTINATION ${APP_RESOURCE_DIR})
 # FILE(COPY mmp_panda_tool_no_collision.urdf DESTINATION ${APP_RESOURCE_DIR})
-FILE(COPY world_weld.urdf DESTINATION ${APP_RESOURCE_DIR})
-
 
 # copy in sai2-interfaces
 FILE(COPY ${SAI2-INTERFACES_UI_DIR} DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
